# LBM-t

./: CMakeLists.txt  Makefile  ReadMe.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  run-tests.yml
docker/: Dockerfile  docker-compose.yml
include/lbt/common/: openmp_manager.hpp  timer.hpp
include/lbt/continuums/: continuum_base.hpp  simple_continuum.hpp  vtk_continuum.hpp
include/lbt/lattices/: D2Q9.hpp  D3Q15.hpp  D3Q19.hpp  D3Q27.hpp
include/lbt/populations/: aa_population.hpp  ab_population.hpp  collision_operators.hpp  population.hpp
include/lbt/populations/collision/: bgk.hpp  collision_base.hpp
include/lbt/populations/indexing/: indexing.hpp
include/lbt/units/detail/: amount_of_substance.hpp  amount_of_substance_literals.hpp  area.hpp  density.hpp  dynamic_viscosity.hpp  dynamic_viscosity_literals.hpp  kinematic_viscosity.hpp  kinematic_viscosity_literals.hpp  length.hpp  length_literals.hpp  mass.hpp  mass_literals.hpp  molar_mass.hpp  molar_mass_literals.hpp  pressure_literals.hpp  temperature.hpp  temperature_literals.hpp  time.hpp  time_literals.hpp  velocity.hpp  volume.hpp
src/: main.cpp  simple_main.cpp
src/common/: disclaimer.cpp  openmp_manager.cpp  timer.cpp  vtk_utilities.cpp
test/: converter_test.cpp
test/common/: disclaimer_test.cpp  openmp_manager_test.cpp  output_utilities_test.cpp  stream_manager_test.cpp  timer_test.cpp  tuple_utilities_test.cpp  type_definitions_test.cpp  vtk_utilities_test.cpp
test/continuums/: continuum_base_test.hpp  simple_continuum_test.cpp  vtk_continuum_test.cpp
test/geometry/: vtk_import_test.cpp
test/lattices/: lattices_test.cpp
test/math/: math_test.cpp
test/populations/: aa_population_test.cpp  ab_population_test.cpp
test/populations/boundaries/: guo_test.cpp  normal_test.cpp  orientation_test.cpp
test/populations/indexing/: aa_pattern_test.cpp  indexing_test.cpp
test/simulation/: simulation_test.cpp
test/test_utilities/: test_utilities_test.cpp
